Bug 1010417 - IonMonkey: Remove the script size limit for offthread compilation, r=jandem